# pyllo

./: .gitignore  README.md  pyproject.toml
data/minerals/: RRUFF_Export_20251007_124313.csv
docs/: rag_plan.md  usage.md
pyllo/: __init__.py  cborg.py  chunking.py  cli.py  config.py  embedding.py  generator.py  ingest.py  minerals.py  pdf.py  rag.py  retriever.py  structures.py  vectorstore.py
